# mercury-ai

./: .env.example  .gitignore  README.md  pyproject.toml  run_cli.py  run_web.py
mercury_agent/: anthropic_client.py  cli.py  cli_main.py  config.py  extractor.py  mercury_client.py  metrics.py  ollama_client.py  openai_client.py  prompt.py  provider.py  provider_factory.py  state.py  tools.py  web.py  web_main.py
skills/: hydra-reference.md  mercury-compose.md  mercury-hydra.md  mercury-kokoro.md
static/: index.html
