[project]
name = "mercury-ai"
version = "0.1.0"
description = "LLM-powered orchestrator for Mercury Playground live coding"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "websockets>=14.0",
]

[project.scripts]
mercury-cli = "mercury_agent.cli_main:main"
mercury-web = "mercury_agent.web_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
